# biodiff

./: .gitattributes  .gitmodules  CHANGELOG  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  test.yml
biodiff-align/: Cargo.toml
biodiff-align/src/: lib.rs  rustbio.rs  wfa2.rs
biodiff-wfa2-sys/: CMakeLists.txt  Cargo.toml  bindgen_command.sh  build.rs
biodiff-wfa2-sys/src/: bindings.rs  lib.rs
hexagex/: CHANGELOG  Cargo.toml  README.md
hexagex/src/: bin.rs  lib.rs
src/: align.rs  backend.rs  config.rs  control.rs  cursor.rs  datastruct.rs  dialog.rs  doublehex.rs  drawer.rs  file.rs  main.rs  preset.rs  print.rs  search.rs  selection.rs  style.rs  util.rs  utils.rs  view.rs
src/align/: block_aligner.rs  rustbio.rs  wfa2.rs
src/dialog/: algorithm_presets.rs  algorithm_settings.rs  goto.rs  search.rs  set_offset.rs  settings.rs  style_settings.rs
src/help/: algorithm.txt  goto.txt  main.txt  preset.txt  search.txt  set_offset.txt  style.txt
src/view/: aligned.rs  unaligned.rs
tests/: cli_tests.rs  text_x.txt  text_y.txt
tests/cmd/: binary.json  binary.stdout  binary.toml  braille.json  braille.stdout  braille.toml  default.json  default.stdout  default.toml  everything.json  everything.stdout  everything.toml  legacy-config.json  legacy-config.stdout  legacy-config.toml  roman-rtl.json  roman-rtl.stdout  roman-rtl.toml  version.stdout  version.toml
