[package]
name = "biodiff"
description = "Compare binary files using sequence alignment"
repository = "https://www.github.com/8051Enthusiast/biodiff"
version = "1.1.0"
authors = ["8051Enthusiast <8051Enthusiast@protonmail.com>"]
edition = "2021"
license = "MIT"
default-run = "biodiff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"hexagex",
]

[dependencies]
bio = "1.3.1"
crossterm = "0.26.1"
crossbeam-utils = "0.8.16"
cursive_buffered_backend = "0.6.1"
unicode-width = "0.1.10"
memmap2 = "0.7.1"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
dirs = "5.0.1"
regex = "1.9.1"
hexagex = { path = "hexagex", version = "0.2.2" }
realfft = "3.3.0"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]

[profile.dev.package.bio]
opt-level = 3
