[package]
name = "biodiff"
description = "Compare binary files using sequence alignment"
repository = "https://github.com/8051Enthusiast/biodiff"
version = "1.1.0"
authors = ["8051Enthusiast <8051Enthusiast@protonmail.com>"]
edition = "2021"
license = "MIT"
default-run = "biodiff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"hexagex",
	"biodiff-wfa2-sys",
]

[features]
default = ["bundle-wfa2"]
bundle-wfa2 = ["biodiff-wfa2-sys/bundle-wfa2", "wfa2"]
wfa2 = ["dep:biodiff-wfa2-sys"]

[dependencies]
bio = "1.6.0"
crossterm = "0.25.0"
cursive_buffered_backend = "0.6.1"
unicode-width = "0.1.11"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
dirs = "5.0.1"
regex = "1.10.4"
hexagex = { path = "hexagex", version = "0.2.2" }
realfft = "3.3.0"

[dependencies.clap]
version = "4.5.4"
default-features = false
features = ["color", "help", "usage", "std", "derive"]

[dependencies.biodiff-wfa2-sys]
path = "biodiff-wfa2-sys"
version = "2.3.4"
default-features = false
optional = true

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]

[profile.dev.package.bio]
opt-level = 3
