[package]
name = "biodiff-align"
version = "1.2.1-preview"
description = "Sequence alignment bindings for biodiff"
repository = "https://github.com/8051Enthusiast/biodiff"
authors = ["8051Enthusiast <8051Enthusiast@protonmail.com>"]
edition = "2021"
license = "MIT"

[features]
default = ["bundle-wfa2", "bio"]
bundle-wfa2 = ["biodiff-wfa2-sys/bundle-wfa2", "wfa2"]
wfa2 = ["dep:biodiff-wfa2-sys"]
bio = ["dep:bio"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies.bio]
version = "1.6.0"
optional = true

[dependencies.biodiff-wfa2-sys]
path = "../biodiff-wfa2-sys"
version = "2.3.5"
default-features = false
optional = true
