[package]
name = "biodiff-wfa2-sys"
version = "2.3.4"
edition = "2021"
description = "Rust bindings for the WFA2 library"
license = "MIT"
exclude = ["/WFA2-lib/img"]
links = "wfa2"

[features]
default = ["bundle-wfa2"]
bundle-wfa2 = []

[build-dependencies]
cmake = { version = "0.1" }
bindgen = "0.69.4"
