[package]
name = "biodiff-wfa2-sys"
version = "2.3.5"
edition = "2021"
description = "Rust bindings for the WFA2 library"
repository = "https://github.com/8051Enthusiast/biodiff"
license = "MIT"
exclude = ["/WFA2-lib/img", "/WFA2-lib/tests"]
links = "wfa2"

[features]
default = ["bundle-wfa2"]
bundle-wfa2 = ["cmake"]

[build-dependencies]
cmake = { version = "0.1", optional = true }
