[package]
name = "hexagex"
description = "Match binary data with hexadecimal regexes"
repository = "https://www.github.com/8051Enthusiast/biodiff"
authors = ["8051Enthusiast <8051Enthusiast@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hexagex"
path = "src/lib.rs"

[[bin]]
name = "hexagex"
path = "src/bin.rs"

[dependencies]
regex = "1.5.4"
regex-syntax = "0.6.25"
hex = "0.4.3"
